fixing wordwrap issue for ttext only in div

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -43,7 +43,7 @@
 }
 
 /* regular styles */
-p, a, li, h1, h2, h3, h4, h5, h6 {
+p, a, li, h1, h2, h3, h4, h5, h6, div {
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
